# banana_dispenser

./: .gitattributes  .gitignore  README.md  README.zh-TW.md  pyproject.toml
banana_dispenser/: banana_dispenser.py  banana_dispenser.pyproject  banana_dispenser.qrc  data_process.py  qt_pd_model.py  qtquickcontrols2.conf  rc_banana_dispenser.py  store.py  util.py
banana_dispenser/App/: Main.qml  Main.ui.qml  MemFileSel.ui.qml  ScanPage.ui.qml  SettingsPage.ui.qml  qmldir
banana_dispenser/App/Pages/: MemFileSel.qml  ScanPage.qml  SettingsPage.qml
tests/: test_data_process.py  test_store.py
tests/data/: objects.sample.csv  people_list.sample.csv  people_list.sample.xlsx
